# pypare

./: .bumpversion.cfg  .coveragerc  Dockerfile  LICENSE.txt  Makefile  README.rst  config.env  deploy.env  pylava.ini  pyproject.toml  pytest.ini  tox.ini
src/pypare/: __init__.py  config.py  logging.py  plugins.py  pypi.py  utils.py
src/pypare/pypi/: __init__.py  model.py
src/pypare/scripts/: __init__.py
src/pypare/templates/: simple.j2  simple_package.j2
tests/: conftest.py  test_loader.py  test_project.py  test_pypi.py  test_scripts.py
tests/data/: project-2-upstream.json  project-2.json  project.json
tests/data/cache/channels/f/foobar/: metadata.json
tests/data/cache/channels/test/: metadata.json
tests/data/cache/channels/test-upstream/: metadata.json
tests/data/cache/channels/test-upstream/projects/f/foobar/0.1.0/: metadata.json
tests/data/cache/channels/test-upstream/projects/f/foobar/0.1.0/files/: foobar-0.1.0.txt
tests/data/cache/channels/test-upstream/releases/92/f89b/a34e48001939d59cdd421abd04218990f0b7d311b34c257acf2f6ded05c16148/: metadata.json  upstream-metadata.json
tests/data/cache/channels/test/projects/f/foobar/0.1.0/files/: packagetype.json
tests/data/cache/channels/test/releases/92/f89b/a34e48001939d59cdd421abd04218990f0b7d311b34c257acf2f6ded05c16148/: metadata.json  upstream-metadata.json
