[tool.poetry]
name = "pypare"
version = "0.1.0"
description = "Python Package Resolver"
authors = ["Oliver Berger <diefans@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.4"

[tool.poetry.dev-dependencies]
python-language-server = "^0.19.0"
pytest = "^3.7"
pytest-randomly = "^1.2"
pytest-asyncio = "^0.9.0"
pytest-aiohttp = "^0.3.0"
pytest-pycodestyle = "^1.2"
pytest-pydocstyle = "^1.3"
pytest-mock = "^1.10"
pytest-watch = "^4.2"
pytest-cov = "^2.5"
asynctest = "^0.12.2"
coverage = "^5.0a2"
tox = "^3.2"
tox-pyenv = "^1.1"
ipython = "^6.5"
pdbpp = "^0.9.2"
radon = "^2.2"
pylava = "^0.2.1"
pylava_pylint = "^0.0.2"
isort = "^4.3"
pyflakes = "^2.0"
sphinx = "^1.7"
bump2version = "^0.5.10"
