[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pypare"
version = "0.3.0"
description = "A very simple pypi cache"
repository = "https://github.com/diefans/pypare"
readme = "README.rst"
authors = ["Oliver Berger <oliver@digitalarchitekt.de>"]
license = "Apache-2.0"
keywords = ["pypi", "cache", "asyncio"]

[tool.poetry.scripts]
pypare = 'pypare.scripts:main'

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.4"
aiohttp-jinja2 = "^1.1"
aiotask_context = "^0.6.0"
click = "^7.0"
structlog = "^18.2"
colorama = "^0.3.9"
aiofile = "^1.4"
aiofiles = "^0.4.0"
inotipy = "^0.1.1"
packaging = "^18.0"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
pytest-randomly = "*"
pytest-asyncio = "*"
pytest-aiohttp = "*"
pytest-pycodestyle = "*"
pytest-pydocstyle = "*"
pytest-mock = "*"
pytest-watch = "*"
pytest-cov = "*"
pytest-datafiles = "*"
asynctest = "*"
# coverage 5.0a3 does not work well with pytest-watch
coverage = "^4"
tox = "^3.2"
tox-pyenv = "^1.1"
ipython = "^6.5"
pdbpp = "^0.9.2"
radon = "^2.2"
pylava = "^0.2"
pylava_pylint = "*"
isort = "^4"
pyflakes = "^2.0"
sphinx = "^1.7"
bump2version = "^0.5.10"
pudb = "^2018.1"
pytest-pudb = "^0.6.0"
mock = "^2.0"
